Rename backend script to master

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3
 
 ADD analysis.py /
-ADD backend.py /
+ADD master.py /
 ADD storage /storage
 
 # RUN pip install json
 
-ENTRYPOINT ["python", "./backend.py"]
+ENTRYPOINT ["python", "./master.py"]
 
 CMD [ "www.dockerfile.backend.example.de" ]
