--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,10 +3,13 @@ FROM ubuntu
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y -q python-all python-pip
 
-ADD app.py /
-ADD index.html /
-
-RUN pip install Flask
+# use pip caching (COPYs and ADDs in this order!)
+COPY requirements.txt /
+WORKDIR /
+RUN pip install -r requirements.txt
+# now add the rest
+COPY app.py /
+COPY index.html /
 
 EXPOSE 5000
 CMD ["python", "app.py"]
