--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,4 @@
-FROM ubuntu
-
-RUN apt-get update
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y -q python3.7 python3-pip
+FROM python:3.7
 
 # use pip caching (COPYs and ADDs in this order!)
 COPY requirements.txt /
