--- a/tools/theharvester/Dockerfile
+++ b/tools/theharvester/Dockerfile
@@ -4,5 +4,4 @@ RUN apt update
 RUN apt install -y theharvester
 
 # Run the application.
-ENTRYPOINT ["theharvester"]
-CMD ["--help"]
+CMD ["theharvester", "--help"]
