--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,10 @@ language: python
 python:
 - "3.6"
 
+install:
+  - "pip install flake8"
+  - "apt install shellcheck"
+
 script:
   - echo "Hello World!"
+  - ls **/*
