Test if sudo works

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 
 install:
   - "pip install flake8"
-  - "apt install shellcheck"
+  - "sudo apt install shellcheck"
 
 script:
   - echo "Hello World!"
