--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ install:
   - "sudo apt install shellcheck"
 
 script:
-  - echo "Hello World!"
-  - ls **/*
+  - shellcheck **/*.sh
+  - flake8 **/*.py
