--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ language: python
 python:
 - "3.6"
 
+before_install:
+  - sudo apt update
+
 install:
   - "pip install flake8"
-  - "sudo apt update"
   - "sudo apt install shellcheck"
 
 script:
