add analyzer container

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "api/templates/scanner/example/src/backyard/api/proto"]
 	path = api/templates/scanner/example/src/backyard/api/proto
 	url = https://github.com/cyber-fighters/proto.git
+[submodule "api/templates/analyzer/example/src/backyard/api/proto"]
+	path = api/templates/analyzer/example/src/backyard/api/proto
+	url = https://github.com/cyber-fighters/proto.git
